# ImageSoundifier

./: CMakeLists.txt  a.out  compile_commands.json  image_soundifier  main.cpp  makefile  vcpkg.json  wav_table  wavetable
.cache/clangd/index/: main.c.94FACA8DFE8FCE1C.idx  parse_bmp.c.004BBF23BE751F18.idx  parse_bmp.h.BE982124F7D0686C.idx  paudio_callback.c.915C7A1A0CC136B2.idx  paudio_util.c.3605F9A85ED7D73E.idx  paudio_util.h.6332D1193962292E.idx  pool_utils.h.AAB8FBFA5469BC03.idx  utils.h.60DB9267F2E09054.idx
c_old/: main.c
c_old/parse_bitmap/: gen_noise.c  parse_bmp.h
experiments/: a.out  sine_calc_test.py  test.c
experiments/c_old/pool_library/: pool_utils.c  pool_utils.h
experiments/portaudio_test/: a.out  portaudio_test.c
experiments/sine_test/: sine_calc_test.py
headers/: AudioInterface.hpp  ImageParser.hpp
resorces/: MultiColouredImage.xcf  Untitled.xcf  plot_wavetable.py  testwavetable.txt
src/: AudioInterface.cpp  ImageParser.cpp  main.c  main.cpp  parse_bmp.c  parse_bmp.h  parse_bmp.h.gch  utils.h
src/ImageParser/: ImageParser.cpp  ImageParser.hpp
src/parse_bitmap/: gen_chord.c  gen_chords.c  gen_noise.c  parse_bmp.c  parse_bmp.h  parse_bmp.h.gch
src/pool_library/: pool_utils.c  pool_utils.h
wave_tables/: 0  1  14  5
